# Tinymovr-ROS2

./: CMakeLists.txt  README.md  package.xml  ros2_control.xml
examples/config/: test_controllers.yaml  test_trajectory_controller.yaml  tinymovr_ros2_control.xml
examples/description/: test_rig.urdf.xacro
examples/launch/: test_hardware_launch.py  test_trajectory_launch.py
include/: tinymovr_hardware.hpp  visibility_control.hpp
include/socketcan_cpp/: socketcan_cpp.hpp
src/: control_node_main.cpp  tinymovr_hardware.cpp  tm_joint_iface.cpp
