<?xml version="1.0"?>
<package format="3">
  <name>tinymovr_ros2</name>
  <version>0.0.0</version>
  <description>A ROS2 hardware interface for Tinymovr, for use with ros2_control.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license> <!-- Or Apache-2.0, etc. -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- ROS2 Control Dependencies -->
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>

  <!-- Provides diff_drive_controller, velocity_controllers, etc. -->
  <depend>ros2_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- This line is ESSENTIAL for your hardware interface to be found -->
    <ros2_control plugin="${prefix}/ros2_control.xml"/>
  </export>
</package>

